# http-server

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  Readme_CN.md  readme.md  readme_CN.md  ss-rust-run.sh  test.cpp
.cache/clangd/index/: helloworld.cpp.68FA1A91DE112363.idx  helloworld.cpp.E2D265167707EFF7.idx
linux/: CMakeLists.txt  epoll_http_server.cpp  readme.md  readme_cn.md  socks5_proxy_work.cpp  socks5_select
linux/iteration/: CMakeLists.txt
linux/iteration/01-basic-socket-echo-server/: CMakeLists.txt  echo_server.c  echo_server.cpp
linux/iteration/01-iterative-echo-server/: CMakeLists.txt  echo_server.cpp
linux/iteration/02-multiprocess-echo-server/: CMakeLists.txt  echo_server.cpp
linux/iteration/02-select-and-non-blocking/: select_server.cpp
linux/iteration/02-select-non-blocking/: CMakeLists.txt
linux/iteration/03-iterative-udp-server/: CMakeLists.txt  iterative_udp_server.cpp
linux/iteration/03-poll-non-blocking/: CMakeLists.txt  poll_server.cpp
linux/iteration/03-unp-summary/: CMakeLists.txt  unp_summary.cpp
linux/iteration/04-select-summary/: CMakeLists.txt
linux/iteration/04-select-tcp-udp/: CMakeLists.txt  select_tcp_udp.cpp
linux/iteration/04-select-with-concurrent/: CMakeLists.txt  select_concurrent.cpp
linux/iteration/ZZ-client-go/: client  tcp_client  tcp_client.go  udp_client
linux/openssl_shadowsocks.cpp/: encrypt.cpp  main.cpp
linux/src/: CMakeLists.txt  Makefile  channel.cpp  channel.h  config.h  epoll_event.h  epoller.cc  event_loop.h  eventloop.cpp  eventloop.h  http.cpp  http.h  http_conn.cpp  http_connection.cc  http_connection.h  httpproxy.cpp  httpproxy.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h  log.h  lrucache.h  main.cpp  readme.md  router.h  select.cpp  thread_pool.h  threadpool.h  timer_lst.h  timewheel.h  utils.cpp  utils.h  webserver  webserver.cc  webserver.cpp  webserver.h
linux/test/: CMakeLists.txt  Makefile  dbg.h  dbg_test.cpp  epoll_http_server.cpp  epoll_oneshot  fork  function_test.cpp  openssl_test.cpp  producer_consumer.cpp  select_server_test  signal_test  singleton_multithread.cpp  sort_lst_timer.h  thread_pool.hpp  thread_pool_test.cpp
linux/test/concurrent/: CMakeLists.txt  condition_variable.cpp  fork.cpp  fork_test.cpp  hello_world.cpp  interleave_A_and_B.cpp  memer_function.cpp  multi_write_single_reader.cpp  mutex_lock.cpp  process_cgi.cpp  processpool.h  producer_consumer.cpp  thread_local_data.cpp  thread_pool.hpp  thread_pool_test.cc  thread_pool_test.cpp
linux/test/file/: list_files.cpp
linux/test/go/: client  client.go
linux/version0.01/: Makefile  ReadMe.md  locker.h
linux/version0.02/: epoller.h  event_loop.cc  http_connection.cc  utils.cpp  webserver
linux/version0.03/: dbg.h
resource/: 404.html  accept.html  echo.html  index.css  index.html  main  t.html
src/linux/: CMakeLists.txt  dbg_test.cpp  http_parser.cpp  socks5_proxy_work.cpp  socks5_select.cpp
src/test/: socks5_test.py
src/windows/: memory_test.cpp  straydog.cpp
src/windows/version0.02/: CMakeLists.txt  Makefile  crypto.cpp  crypto.h  dbg.h  eventloop.cpp  eventloop.h  main.cpp  proxyserver.cpp  proxyserver.h  readme.md  shadowsocks.cpp  shadowsocks.h  straydog.cpp  threadpool.h
src/windows/version0.02/test/: CMakeLists.txt  cmake_test.cpp  mysqrt.cpp  windivert_test.cpp
stonejing-webserver-windows/: Makefile
stonejing-webserver-windows/chapter5_net/: readme.md
stonejing-webserver-windows/chapter6_net/: resolve.cpp
test/: Makefile  dict_test.py  selectmode.cpp  tcpserver.cpp  test  test1.cpp  thread_local_none.cpp
test/chapter5_net/: overlappedacceptex.cpp  overlappedcompletionroutines.cpp  selectmodel.cpp  testclient.cpp
test/chapter6_net/: iocp.cpp
webserver/resource/: accept.html
webserver/version0.01/: Makefile  http_conn.h  main.cpp  singleton.cpp  thread_pool_c14.h  timer_wheel.cpp  timer_wheel.h  utils.h  webserver  webserver.cpp
webserver/version0.02/: event_loop.cc  event_loop.h  readme.md  thread_pool.cc  webserver.cc
webserver/version0.03/: event_loop.h
webserver/version0.03/log/: AsyncLogging.h  CMakeLists.txt  FileUtil.cpp  FileUtil.h  FileUtilTest.cpp  LogStream.h  Logging.h  dbg.h
windows/: CMakeLists.txt  Makefile  memory_test.cpp  resolve.h  socks5_select.cpp
windows/src/: CMakeLists.txt  crypto.h  dbg.h  eventloop.cpp  eventloop.h  http.cpp  http.h  log.h  main.cpp  proxyserver.cpp  proxyserver.h  readme.md  server.cpp  server.h  shadowsocks.cpp  shadowsocks.h  straydog.cpp  straydog.h  threadpool.h  threadpool_queue.h  utils.cpp  utils.h
windows/straydog/: CMakeLists.txt  eventloop.cpp  eventloop.h  main.cpp  proxyserver.cpp  proxyserver.h  shadowsocks.h  socketdump.cpp  straydog.cpp  straydog.h  threadpool.h
windows/test/: CMakeLists.txt  Makefile  WSAEventSelect_tcp_server.cpp  atomic_test.cpp  block_echo_client.cpp  block_echo_server.cpp  client_test.cpp  debug_test.cpp  log_test.cpp  openssl_test.cpp  pointer_test.cpp  result.txt  select_test.cpp  select_test_2.cpp  selectmode.cpp  socks5_test.py  systray_only.cpp  tcp_echo_client.py  tcpclient.cpp  tcpserver.cpp  thread_local_none.cpp  thread_test.cpp  thread_test_1.cpp  threadpool.h  udp_client.py  vector_test.cpp  windivert_test.cpp  windivert_test.h
windows/test/chapter5_net/: iocp.cpp  overlappedacceptex.cpp  overlappedcompletionroutines.cpp  readme.md  selectmodel.cpp  testclient.cpp
windows/test/chapter6_net/: iocp.cpp  resolve.cpp  resolve.h
windows/version0.01/: CMakeLists.txt  Makefile  aead_encrypt.cpp  aead_encrypt.hpp  aead_test.cpp  crypto.hpp  dbg.cpp  dbg.hpp  dbg_test.cpp  memory_test.cpp  mutlthread_blocking_client.cpp  resolve.cpp  resolve.h  socks5_select.cpp  straydog.cpp  straydog.hpp  stream_encrypt.cpp  stream_encrypt.hpp
windows/version0.02/: CMakeLists.txt  crypto.cpp  dbg.h  eventloop.cpp  eventloop.h  main.cpp  proxyserver.cpp  proxyserver.h  readme.md  shadowsocks.cpp  shadowsocks.h  socketdump.cpp  straydog.cpp  threadpool.h  threadpool_queue.h
windows/version0.02/test/: CMakeLists.txt  cmake_test.cpp  mysqrt.cpp
(+358 files in other folders)
